<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIMNO A CANCHIS   </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"> HIMNO A CANCHIS </string>
    <string name="titulocoro">CORO </string>
    <string name="tituloestrofa">ESTROFAS </string>
    <string name="Contenidocoro">Canchis, mi pueblo bravo y altivo todo leyenda, clamor y anhelo eres historia hecha en granito eres bandera que aman los cielos. </string>
    <string name="Contenidoestrofa">Tienes la estirpe de los guerreros que hicieron solos grandes a su tierra para nosotros eres ejemplo; para el futuro eres hoguera. 

Canchis, mi tierra libertadora, pendón al tope, luz de batalla,clarín de lucha, himno de gloria, fulgor que enciendes cantos al alba. 

Canchis, mi Canchis, para tus hijos eres un grito de rebeldía,eres la chispa de sus latidos, la luz que indica rumbo a sus vidas.
    </string>    
    
</resources>
